# dgii_reports

./: README.md  pyproject.toml
dgii_reports/: api.py  hooks.py  modules.txt  patches.txt  requirements.txt
dgii_reports/dgii_reports/doctype/comprobantes_fiscales_ncf/: comprobantes_fiscales_ncf.js  comprobantes_fiscales_ncf.json  comprobantes_fiscales_ncf.py  test_comprobantes_fiscales_ncf.py
dgii_reports/dgii_reports/doctype/comprobantes_fiscales_settings/: comprobantes_fiscales_settings.json  comprobantes_fiscales_settings.py
dgii_reports/dgii_reports/doctype/cuentas_en_columna/: cuentas_en_columna.json  cuentas_en_columna.py
dgii_reports/dgii_reports/doctype/dgii_reports_settings/: dgii_reports_settings.js  dgii_reports_settings.json  (+2 more)
dgii_reports/fixtures/: custom_field.json  mode_of_payment.json  mode_of_payment_cleanup.py  notification.json  property_setter.json  tipo_comprobante_fiscal.json  tipo_de_anulacion.json  tipo_de_ingreso.json
dgii_reports/hook/: purchase_invoice.py  sales_invoice.py
dgii_reports/patches/: delete_mode_of_payment_patch.py  delete_old_custom_fields_comprobantes_fiscales_ncf.py  delete_old_custom_fields_purchase_invoice_patch.py  delete_old_custom_fields_purchase_invoice_patch_I.py  delete_old_custom_fields_sales_invoice_patch.py
dgii_reports/public/js/: custom_bulk_operations.js  custom_cancel.js  customer.js  purchase_invoice.js  purchase_invoice_list.js  sales_invoice.js  sales_invoice_list.js  supplier.js
dgii_reports/servicios/: cedula.py  consultas_web_dgii.py  ncf.py  rnc.py
dgii_reports/translations/: es-DO.csv
(+29 files in other folders)
